<resources>
    <string name="app_name">PhotoCollage</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <!-- 相片電影 -->
    <string name="btn_addPic">加入圖片</string>
    <string name="btn_addMus">加入音樂</string>
    <string name="btn_addRec">加入語音</string>
    <string name="btn_addEff">加入特效</string>
    <string name="btn_generate">產生電影</string>
    <string name="text_sec">秒數：1</string>
    <string name="finishText">恭喜您！完成了獨一無二的相片電影</string>
    <string name="refresh">重新整理</string>
    <string name="finish">完成</string>
    <string name="btn_delRecord">移除語音</string>
    <string name="btn_addRecord">確定</string>
    <string name="shareVideo">分享影片到...</string>
    <!-- 相片選擇器 -->
    <string name="select_album">選擇相簿</string>
    <string name="select_image">選擇圖片</string>
    <string name="latest_image">最近照片</string>
    <string name="photo_album">相簿</string>
    <string name="main_confirm">確定</string>
    <string name="main_cancel">取消</string>
    <string name="main_back">返回</string>
    <!-- 協作相簿 -->
    <string name="add_album">新增相簿</string>
    <string name="share_album">共享相簿</string>
    <string name="share_photo">分享相片</string>
    <string name="upload_photo">上傳照片</string>
    <string name="share_email">協作者的 E-mail</string>
    <string name="share_add">新增相片</string>
    <string name="share_del">刪除相片</string>
    <string name="share_edit">編輯相片</string>
    <string name="share_download">下載相片</string>
    <string name="share_cancel">取消</string>
    <string name="share_ok">新增協作者</string>
    <string name="sharePhoto">分享相片到...</string>
    <!-- 主選單 -->
    <string-array name="drawer_array">
        <item>主頁</item>
        <item>會員</item>
        <item>相片電影</item>
        <item>相片拼貼</item>
        <item>協作相簿</item>
    </string-array>
    <string name="drawer_home">首頁</string>
    <string name="drawer_collage">相片拼貼</string>
    <string name="drawer_movie">相片電影</string>
    <string name="drawer_album">協作相簿</string>
    <string name="drawer_member">會員中心</string>
    <string name="drawer_seeting">設定</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="action_check">確定</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <!-- 會員介面 -->
    <string name="hint_email">Email</string>
    <string name="hint_password">密碼</string>
    <string name="hint_name">姓名</string>
    <string name="btn_login">登入</string>
    <string name="btn_register">註冊</string>
    <string name="btn_link_to_register">還不是會員？立即註冊！</string>
    <string name="btn_link_to_login">已經註冊了！立即登入</string>
    <string name="welcome">歡迎</string>
    <string name="btn_logout">登出</string>
    <string name="name">姓名</string>
    <string name="facebook_app_id">900591136714432</string>
</resources>
