<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:checked="true"
            android:icon="@mipmap/ic_home_white_24dp"
            android:title="@string/drawer_home"/>

        <item
            android:id="@+id/drawer_member"
            android:icon="@mipmap/ic_person_white_24dp"
            android:title="@string/drawer_member"/>

        <item
            android:id="@+id/drawer_movie"
            android:icon="@mipmap/ic_movie_creation_white_24dp"
            android:title="@string/drawer_movie"/>

        <item
            android:id="@+id/drawer_album"
            android:icon="@mipmap/ic_cloud_queue_white_24dp"
            android:title="@string/drawer_album"/>

    </group>
</menu>