<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/md_dark_background">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.bigkoo.convenientbanner.ConvenientBanner
                android:id="@+id/convenientBanner"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="200dp">
                <ImageButton
                    android:id="@+id/menu_btn_movie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="20dp"
                    android:background="@color/md_light_blue_900"
                    android:scaleType="fitCenter"
                    android:padding="40dp"
                    android:src="@mipmap/ic_movie_white_48dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignRight="@id/menu_btn_movie"
                    android:layout_alignBottom="@id/menu_btn_movie"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:text="@string/drawer_movie"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1">
                    <ImageButton
                        android:id="@+id/menu_btn_album"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="10dp"
                        android:background="@color/md_pink_A700"
                        android:scaleType="fitCenter"
                        android:padding="40dp"
                        android:src="@mipmap/ic_cloud_queue_white_48dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@id/menu_btn_album"
                        android:layout_alignBottom="@id/menu_btn_album"
                        android:layout_margin="10dp"
                        android:textSize="20sp"
                        android:text="@string/drawer_album"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="180dp"
                    android:layout_weight="1">
                    <ImageButton
                        android:id="@+id/menu_btn_member"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="20dp"
                        android:background="@color/md_orange_900"
                        android:scaleType="fitCenter"
                        android:padding="40dp"
                        android:src="@mipmap/ic_person_white_48dp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignRight="@id/menu_btn_member"
                        android:layout_alignBottom="@id/menu_btn_member"
                        android:layout_margin="10dp"
                        android:textSize="20sp"
                        android:text="@string/drawer_member"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
